# 5

./: .gitignore  README.md  pyproject.toml
docs/: DATA_STRATEGY.md  GDELT_TLS_SMOKE_RESULT.md  M1_PARLGOV_BASELINE.md  M2_1_ACCEPTANCE_CHECKLIST.md  M2_1_NORMALIZED_VOLUME.md  M2_1_OPTIMIZATION_PROTOCOL.md  M2_1_RUN_DIAGNOSTICS.md  M2_1_RUN_STATUS.md  M2_1_SELECTED_RESULT.md  M2_GDELT_PILOT.md  M2_LOCAL_RESULT.md  M2_STATUS.md  M3_1_HIERARCHICAL_HAZARD.md  M3_1_HIERARCHICAL_SELECTION_RESULT.md  M3_1_UNCERTAINTY.md  M3_1_UNCERTAINTY_RESULT.md  M3_2_HYBRID_COMPETING.md  M3_2_HYBRID_COMPETING_RESULT.md  M3_3_EXIT_CONDITIONED_PATHS.md  M3_3_EXIT_CONDITIONED_RESULT.md  M3_4_EVENT_CLUSTER_AUDIT.md  M3_4_EVENT_CLUSTER_AUDIT_DIAGNOSTICS.md  M3_4_EVENT_CLUSTER_AUDIT_RESULT.md  M3_COMPETING_BENCHMARK.md  M3_COMPETING_BENCHMARK_RESULT.md  M3_COMPETING_RISKS.md  M3_LEADER_SURVIVAL.md  M3_SURVIVAL_BENCHMARK.md  M3_SURVIVAL_BENCHMARK_RESULT.md  MILESTONE_V0.1.md  MODEL_DESIGN.md  PUBLIC_ACTIONS_SMOKE.md  ROADMAP_M2_1.md  WORKING_RULES.md
examples/: case_schema.json
tests/: test_benchmark.py  test_competing_benchmark.py  test_competing_risks.py  test_conditioned_paths.py  test_engine.py  test_event_balanced_paths.py  test_event_path_audit.py  test_gdelt.py  test_gdelt_download.py  test_hierarchical.py  test_hybrid_competing.py  test_ledger.py  test_m2.py  test_m2_1.py  test_m2_1_features.py  test_m2_1_selection.py  test_m3_1_selection.py  test_numeric_scaling.py  test_parlgov.py  test_parlgov_competing.py  test_parlgov_download.py  test_parlgov_survival.py  test_survival.py  (+2 more)
(+57 files in other folders)
