[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fencha"
version = "0.1.0"
description = "Time-aware, auditable historical forecasting engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "FENCHA Project"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fencha = "fencha.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
